--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "18.x",
+    "pnpm": "8.x"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -27,25 +31,33 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^10.0.1",
+    "@vendia/serverless-express": "^4.10.4",
+    "aws-lambda": "^1.0.7",
+    "class-validator": "^0.14.0",
     "helmet": "^4.2.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4",
+    "rxjs": "^7",
+    "typeorm": "^0.3.17",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.2",
     "@nestjs/schematics": "^7.2.1",
     "@nestjs/testing": "^7.5.1",
+    "@types/aws-lambda": "^8.10.126",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
-    "@types/node": "^13.13.30",
+    "@types/node": "14.18.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
-    "@types/supertest": "^2.0.8",
+    "@types/superagent": "4.1.10",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
     "eslint": "7.7.0",
@@ -54,12 +66,13 @@
     "jest": "26.4.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "serverless-offline": "^13.2.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^4.5.0"
   },
   "jest": {
     "moduleFileExtensions": [
