--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,18 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es2022",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "esModuleInterop": true,
     "strict": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+
+  },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
