--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": "18.x",
-    "pnpm": "8.x"
+    "node": "18.x"
   },
   "scripts": {
+    "build": "npm run prebuild && nest build --webpack && npm run move-files && npm run deploy",
+    "move-files": "node scripts/moveFiles.js", 
+    "deploy": "cd dist && npx serverless deploy",   
     "prebuild": "rimraf dist",
-    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -25,17 +26,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/common": "^10.2.9",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.9",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "10.2.9",
     "@nestjs/typeorm": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@vendia/serverless-express": "^4.10.4",
-    "aws-lambda": "^1.0.7",
+
+    "aws-serverless-express": "^3.4.0",
     "class-validator": "^0.14.0",
     "helmet": "^4.2.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
@@ -43,13 +47,16 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7",
+    "serverless-bundle": "^6.0.0",
+    "serverless-webpack": "^5.13.0",
     "typeorm": "^0.3.17",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.2",
-    "@nestjs/schematics": "^7.2.1",
-    "@nestjs/testing": "^7.5.1",
+    "aws-lambda": "^1.0.7",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.9",
     "@types/aws-lambda": "^8.10.126",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
@@ -58,21 +65,23 @@
     "@types/passport-local": "^1.0.33",
     "@types/superagent": "4.1.10",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
-    "eslint": "7.7.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "26.4.2",
-    "prettier": "^1.19.1",
+    "class-transformer": "^0.5.1",
+    "eslint": "8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "jest": "29.7.0",
+    "prettier": "^3.1.0",
     "rimraf": "^3.0.2",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^13.2.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.2.0",
+    "ts-jest": "29.1.1",
     "ts-loader": "^6.2.1",
-    "ts-node": "9.0.0",
+    "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.5.0"
+    "typescript": "^4.8.0",
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "webpack-cli": "^5.1.4"
   },
   "jest": {
     "moduleFileExtensions": [
