--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "npm run prebuild && nest build --webpack && npm run move-files && npm run deploy",
     "move-files": "node scripts/moveFiles.js",
-    "deploy": "cd dist && npx serverless deploy",   
+    "deploy": "cd dist && npx serverless deploy",
     "prebuild": "rimraf dist",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -23,7 +23,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "initialize-db": "node scripts/feed.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.2.9",
@@ -62,6 +63,7 @@
     "@types/superagent": "4.1.10",
     "@types/supertest": "^2.0.11",
     "aws-lambda": "^1.0.7",
+    "dotenv": "^16.3.1",
     "eslint": "8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
